deploy/k8s/dashboard/chronograf.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chronograf
  labels:
    app: chronograf
  namespace: dashboard
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chronograf
      version: latest
  template:
    metadata:
      labels:
        app: chronograf
        version: latest
      annotations:
        note_1: chronograf no need password
    spec:
      volumes:
        - name: chronograf-storage
          persistentVolumeClaim:
            claimName: chronograf-pvc
      containers:
        - name: chronograf
          image: chronograf:1.8
          volumeMounts:
            - name: chronograf-storage
              mountPath: /var/lib/chronograf
          resources:
            limits:
              memory: "50Mi"
              cpu: "100m"
---
apiVersion: v1
kind: Service
metadata:
  name: chronograf
  labels:
    app: chronograf
  namespace: dashboard
spec:
  ports:
    - name: http-chronograf
      port: 8888
      targetPort: 8888
  selector:
    app: chronograf
